Add Recursos, PUT

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -612,6 +612,48 @@ Exemplo de resposta:
 }
 ```
 
+#### PUT
+
+**Alterar status de um pedido**
+
+Esse recurso realiza a alteração do status de um pedido criado. O id do pedido é utilizado para realizar a chamada.
+
+> As possíveis alterações de status são:
+> 
+> * place (Liberar um pedido para pagamento | Exibir pedido na Cielo LIO)
+> * pay (Alterar um pedido para pago)
+> * close (Fechar um pedido)
+> * canceled (cancelar pedido)
+
+> Endpoint:
+> 
+> **PUT** */orders/<id>?operation=<operation>*
+
+Dados de entrada:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|id|path parameter|Identificador do pedido.|Sim|
+|operation|query parameter|Operação que deve ser executada. As possíveis operações são: place (Liberar um pedido para pagamento), pay (deixar um pedido como pago) e close (Fechar um pedido).|Sim|
+
+Exemplo de requisição:
+
+> **PUT**  https://api.cielo.com.br/order-management/v1/orders/db815e66-e5b6-497c-8444-2120cc87d33a?operation=PLACE
+
+Dados de saída:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|N/A||||
+
+Exemplo de resposta:
+
+```json
+N/A
+```
+
+O retorno 200 dessa operação representa sucesso na requisição.
+
 # Integração Local
 
 ## Apresentação
