Fix Recursos, PUT

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -651,7 +651,7 @@ Exemplo de resposta:
 N/A
 ```
 
-O retorno 200 dessa operação representa sucesso na requisição.
+O retorno 200 dessa operação representa sucesso na requisição. teste.
 
 # Integração Local
 
