Add Recursos, Delete

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -651,7 +651,43 @@ Exemplo de resposta:
 N/A
 ```
 
-O retorno 200 dessa operação representa sucesso na requisição. teste.
+O retorno 200 dessa operação representa sucesso na requisição.
+
+#### DELETE
+
+**Excluir um pedido**
+
+Esse recurso é utilizado para excluir um pedido do servidor do Order Manager. O id do pedido é utilizado para realizar a chamada.
+
+> Somente os pedidos com status **DRAFT** podem ser excluídos.
+
+> Endpoint:
+> 
+> **DELETE** */orders/<id>*
+
+Dados de entrada:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|id|path parameter|Identificador do pedido.|Sim|
+
+Exemplo de requisição:
+
+> **DELETE** https://api.cielo.com.br/order-management/v1/orders/db815e66-e5b6-497c-8444-2120cc87d33a
+
+Dados de saída:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|N/A||||
+
+Exemplo de resposta:
+
+```json
+N/A
+```
+
+O retorno 200 dessa operação representa sucesso na requisição.
 
 # Integração Local
 
