Add Recursos, POST

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -689,6 +689,49 @@ N/A
 
 O retorno 200 dessa operação representa sucesso na requisição.
 
+#### POST
+
+**Adicionar Item/Itens em um Pedido**
+
+Esse recurso é utilizado para adicionar um ou mais itens em um pedido já criado. O id do pedido é utilizado para realizar a chamada.
+
+> Somente os pedidos com status **DRAFT** podem ser excluídos.
+>
+> Endpoint:
+> 
+> **POST** */orders/<id>/items*
+
+Dados de entrada:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|id|path parameter|Identificador do pedido.|Sim|
+
+Exemplo de requisição:
+
+```json
+{
+    "sku": "ede8f84a8b8645cb8e576a593c25c6ed",
+    "unit_price": 500,
+    "quantity": 2,
+    "unit_of_measure": "EACH"
+}
+```
+
+Dados de saída:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|N/A||||
+
+Exemplo de resposta:
+
+```json
+N/A
+```
+
+O retorno 200 dessa operação representa sucesso na requisição.
+
 # Integração Local
 
 ## Apresentação
