Add Recursos, GET

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -732,6 +732,52 @@ N/A
 
 O retorno 200 dessa operação representa sucesso na requisição.
 
+#### GET
+
+**Consultar os itens de um pedido**
+
+Esse recurso é utilizado para consultar os itens presentes em um pedido. O id do pedido é utilizado para realizar a chamada.
+
+> Endpoint:
+> 
+> **GET** */orders/<id>/items*
+
+Dados de entrada:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|id|path parameter|Identificador do pedido.|Sim|
+
+Exemplo de requisição:
+
+> **GET** *https://api.cielo.com.br/order-management/v1/orders/c393ce9f-3741-413f-8ad5-2f142eaed51f/items*
+
+Dados de saída:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|orderItems|Lista (OrderItem)|Lista de itens de um pedido.|Sim|
+
+Exemplo de resposta:
+
+```json
+[{
+        "id": 1,
+        "sku": "ede8f84a8b8645cb8e576a593c25c6ed",
+        "unit_price": 500,
+        "quantity": 2,
+        "unit_of_measure": "EACH"
+    },
+    {
+        "id": 2,
+        "sku": "c2f5fb9a5542406e8b7917892329cda8",
+        "unit_price": 1500,
+        "quantity": 3,
+        "unit_of_measure": "EACH"
+    }
+]
+```
+
 # Integração Local
 
 ## Apresentação
