Add Recursos, PUT

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -778,6 +778,47 @@ Exemplo de resposta:
 ]
 ```
 
+#### PUT
+
+**Alterar um item em um pedido**
+
+Esse recurso permite alterar informações de um item de um pedido. O id do pedido e o id_item são utilizados para realizar a chamada.
+
+> Somente os pedidos com status **DRAFT** podem ter itens alterados.
+> 
+> Endpoint:
+> 
+> **PUT** */orders/<id>/items/<id_item>*
+
+Dados de entrada:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|id|path parameter|Identificador do pedido.|Sim|
+|id_item|path parameter|Identificador do item do pedido.|Sim|
+
+Exemplo de requisição:
+
+> **PUT** *https://api.cielo.com.br/order-management/v1/orders/a9398720-9f78-4fa4-a5d4-ba54ba8009e7
+/items/8484df74-eca6-4850-8e4c-35653af0bd31*
+
+```json
+{
+    "sku": "ede8f84a8b8645cb8e576a593c25c6ed",
+    "unit_price": 500,
+    "quantity": 2,
+    "unit_of_measure": "EACH"
+}
+```
+
+Dados de saída:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|N/A||||
+
+O retorno 200 dessa operação representa sucesso na requisição.
+
 # Integração Local
 
 ## Apresentação
