Fix Recursos, PUT

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -778,9 +778,7 @@ Exemplo de resposta:
 ]
 ```
 
-#### PUT
-
-**Alterar um item em um pedido**
+#### PUT **Alterar um item em um pedido**
 
 Esse recurso permite alterar informações de um item de um pedido. O id do pedido e o id_item são utilizados para realizar a chamada.
 
