Fix Recursos, menu lateral

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -389,9 +389,7 @@ Ex.: À Vista, Parcelado, etc.
 
 ### Recursos
 
-#### POST
-
-**Criar um pedido**
+#### POST - Criar um pedido
 
 Esse recurso realiza a criação de um pedido no servidor do Order Manager.
 
@@ -459,9 +457,7 @@ Exemplo de resposta:
 }
 ```
 
-#### GET
-
-**Consultar pedido**
+#### GET - Consultar pedido
 
 Esse recurso é utilizado para obter informações sobre um pedido específico. O id do pedido é utilizado para realizar a chamada.
 
@@ -536,9 +532,7 @@ Exemplo de resposta:
 }
 ```
 
-#### GET
-
-**Consultar todos os Pedidos**
+#### GET - Consultar todos os Pedidos
 
 Esse recurso é utilizado para obter a lista e as informações de todos os pedidos cadastrados no Order Manager.
 
@@ -612,9 +606,7 @@ Exemplo de resposta:
 }
 ```
 
-#### PUT
-
-**Alterar status de um pedido**
+#### PUT- Alterar status de um pedido
 
 Esse recurso realiza a alteração do status de um pedido criado. O id do pedido é utilizado para realizar a chamada.
 
@@ -653,9 +645,7 @@ N/A
 
 O retorno 200 dessa operação representa sucesso na requisição.
 
-#### DELETE
-
-**Excluir um pedido**
+#### DELETE - Excluir um pedido
 
 Esse recurso é utilizado para excluir um pedido do servidor do Order Manager. O id do pedido é utilizado para realizar a chamada.
 
@@ -689,9 +679,7 @@ N/A
 
 O retorno 200 dessa operação representa sucesso na requisição.
 
-#### POST
-
-**Adicionar Item/Itens em um Pedido**
+#### POST - Adicionar Item/Itens em um Pedido
 
 Esse recurso é utilizado para adicionar um ou mais itens em um pedido já criado. O id do pedido é utilizado para realizar a chamada.
 
@@ -732,9 +720,7 @@ N/A
 
 O retorno 200 dessa operação representa sucesso na requisição.
 
-#### GET
-
-**Consultar os itens de um pedido**
+#### GET - Consultar os itens de um pedido
 
 Esse recurso é utilizado para consultar os itens presentes em um pedido. O id do pedido é utilizado para realizar a chamada.
 
@@ -778,7 +764,7 @@ Exemplo de resposta:
 ]
 ```
 
-#### PUT **Alterar um item em um pedido**
+#### PUT - Alterar um item em um pedido
 
 Esse recurso permite alterar informações de um item de um pedido. O id do pedido e o id_item são utilizados para realizar a chamada.
 
