Fix Recursos, PUT

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -611,7 +611,7 @@ Exemplo de resposta:
 Esse recurso realiza a alteração do status de um pedido criado. O id do pedido é utilizado para realizar a chamada.
 
 As possíveis alterações de status são:
-* place (Liberar um pedido para pagamento | Exibir pedido na Cielo LIO)
+* place (Liberar um pedido para pagamento, exibir pedido na Cielo LIO)
 * pay (Alterar um pedido para pago)
 * close (Fechar um pedido)
 * canceled (cancelar pedido)
