Add Recursos, Delete

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -803,6 +803,35 @@ Dados de saída:
 
 O retorno 200 dessa operação representa sucesso na requisição.
 
+#### DELETE - Excluir Item de um pedido
+
+Esse recurso é utilizado para excluir um item presente em um pedido. O id do pedido e o id_item são utilizados para realizar a chamada.
+
+> Somente os pedidos com status **DRAFT** podem ter itens alterados.
+> 
+> Endpoint:
+> 
+> **DELETE** */orders/<id>/items/<id_item>*
+
+Dados de entrada:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|id|path parameter|Identificador do pedido.|Sim|
+|id_item|path parameter|Identificador do item do pedido.|Sim|
+
+Exemplo de requisição:
+
+> **DELETE** *https://api.cielo.com.br/order-management/v1/orders/a9398720-9f78-4fa4-a5d4-ba54ba8009e7/items/8484df74-eca6-4850-8e4c-35653af0bd31*
+
+Dados de saída:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|N/A||||
+
+O retorno 200 dessa operação representa sucesso na requisição.
+
 # Integração Local
 
 ## Apresentação
