Add Recursos, POST

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -832,6 +832,67 @@ Dados de saída:
 
 O retorno 200 dessa operação representa sucesso na requisição.
 
+#### POST-  Adicionar uma Transação
+
+> Recurso utilizado somente para **Ambiente de Sandbox**
+
+Esse recurso permite que o desenvolvedor simule as transações financeiras, adicionando-as manualmente, sendo possível entender o funcionamento em uma Order.
+
+> Endpoint:
+> 
+> **POST** */orders/<id>/transactions>*
+
+Dados de entrada:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|Transactions|Lista (Transaction)|Informações da Transação|Sim|
+
+Exemplo de requisição:
+
+> **POST** *https://api.cielo.com.br/order-management/v1/orders/a9398720-9f78-4fa4-a5d4-ba54ba8009e7/transactions*
+
+```json
+{
+    "transaction_type": "PAYMENT",
+    "status": "CONFIRMED",
+    "Terminal_number": "77102XXX",
+    "card": {
+        "brand": "VISA",
+        "mask": "1234",
+        "bin": "490172",
+        "last": "7897"
+    },
+    "number": "1234589",
+    "authorization_code": "22388292",
+    "payment_product": {
+        "number": 928282,
+        "name": "CREDITO",
+        "sub": {
+            "number": 928282,
+            "name": "A VISTA"
+        }
+    },
+    "amount": 5151
+}
+``` 
+
+Dados de saída:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|id|number|Identificador da Transação|SIM|
+
+```json
+{
+id: "00219dd0-1c13-46da-91e5-1c313f0d2e83"
+}
+```
+
+Em ambiente de Sandbox, onde não há necessidade de ter uma Cielo LIO, e consequentemente não é necessário possuir o número do estabelecimento, faz total sentido fazer essa chamada deste recurso.
+
+Já em ambiente de Produção quem irá criar as transactions é a própria Cielo LIO conforme os pagamentos forem efetuados.
+
 # Integração Local
 
 ## Apresentação
