Add Recursos, GET

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -832,7 +832,7 @@ Dados de saída:
 
 O retorno 200 dessa operação representa sucesso na requisição.
 
-#### POST-  Adicionar uma Transação
+#### POST -  Adicionar uma Transação
 
 > Recurso utilizado somente para **Ambiente de Sandbox**
 
@@ -892,6 +892,61 @@ id: "00219dd0-1c13-46da-91e5-1c313f0d2e83"
 Em ambiente de Sandbox, onde não há necessidade de ter uma Cielo LIO, e consequentemente não é necessário possuir o número do estabelecimento, faz total sentido fazer essa chamada deste recurso.
 
 Já em ambiente de Produção quem irá criar as transactions é a própria Cielo LIO conforme os pagamentos forem efetuados.
+
+#### GET -  Consultar as transações de um pedido
+
+Esse recurso é utilizado para obter as informações de todas as transações realizadas em um pedido. O id do pedido é utilizado para realizar a chamada.
+Em ambiente de produção, uma vez que um pagamento for realizado na Cielo LIO a transactions será adicionada automaticamente no pedido e então, será possível obter as informações do pagamento realizado a partir da chamada deste recurso.
+
+> Endpoint:
+> 
+> **GET** */orders/<id>/transactions*
+
+Dados de entrada:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|id|path parameter|Identificador do pedido.|Sim|
+
+Exemplo de requisição:
+
+> **GET** *https://api.cielo.com.br/order-management/v1/orders/c393ce9f-3741-413f-8ad5-2f142eaed51f/transactions*
+
+Dados de saída:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|transactions|Lista (Transaction)|Lista de transações de um pedido.|SIM|
+
+Exemplo de resposta:
+
+```json
+[{
+    "id": "ede8f84a8b8645cb8e576a593c25c6ed",
+    "transaction_type": "PAYMENT",
+    "status": "CONFIRMED",
+    "terminal_number": "928273921",
+    "card": {
+        "brand": "VISA",
+        "bin": "490172",
+        "last": "7897"
+    },
+    "number": "1234589",
+    "authorization_code": "22388292",
+    "payment_product": {
+        "number": 928282,
+        "name": "CREDITO",
+        "sub": {
+            "number": 928282,
+            "name": "A VISTA"
+        }
+    },
+
+    "amount": 5000,
+    "created_at": "20151020T13:13:29.000Z",
+    "updated_at": "20151022T12:13:29.000Z"
+}]
+```
 
 # Integração Local
 
