Add Fluxo e Notificação

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -395,7 +395,7 @@ Esse recurso realiza a criação de um pedido no servidor do Order Manager.
 
 > Endpoint:
 > 
-> **POST** */orders*
+> **POST** /orders
 
 Dados de entrada:
 
@@ -463,7 +463,7 @@ Esse recurso é utilizado para obter informações sobre um pedido específico. 
 
 > Endpoint:
 > 
-> **GET** */orders<id>*
+> **GET** /orders<id>
 
 Dados de entrada:
 
@@ -538,7 +538,7 @@ Esse recurso é utilizado para obter a lista e as informações de todos os pedi
 
 > Endpoint:
 > 
-> **GET** */orders/*
+> **GET** /orders/
 
 Dados de entrada:
 
@@ -618,7 +618,7 @@ As possíveis alterações de status são:
 
 > Endpoint:
 > 
-> **PUT** */orders/<id>?operation=<operation>*
+> **PUT** /orders/<id>?operation=<operation>
 
 Dados de entrada:
 
@@ -653,7 +653,7 @@ Esse recurso é utilizado para excluir um pedido do servidor do Order Manager. O
 >
 > Endpoint:
 > 
-> **DELETE** */orders/<id>*
+> **DELETE** /orders/<id>
 
 Dados de entrada:
 
@@ -687,7 +687,7 @@ Esse recurso é utilizado para adicionar um ou mais itens em um pedido já criad
 >
 > Endpoint:
 > 
-> **POST** */orders/<id>/items*
+> **POST** /orders/<id>/items
 
 Dados de entrada:
 
@@ -726,7 +726,7 @@ Esse recurso é utilizado para consultar os itens presentes em um pedido. O id d
 
 > Endpoint:
 > 
-> **GET** */orders/<id>/items*
+> **GET** /orders/<id>/items
 
 Dados de entrada:
 
@@ -736,7 +736,7 @@ Dados de entrada:
 
 Exemplo de requisição:
 
-> **GET** *https://api.cielo.com.br/order-management/v1/orders/c393ce9f-3741-413f-8ad5-2f142eaed51f/items*
+> **GET** https://api.cielo.com.br/order-management/v1/orders/c393ce9f-3741-413f-8ad5-2f142eaed51f/items
 
 Dados de saída:
 
@@ -772,7 +772,7 @@ Esse recurso permite alterar informações de um item de um pedido. O id do pedi
 > 
 > Endpoint:
 > 
-> **PUT** */orders/<id>/items/<id_item>*
+> **PUT** /orders/<id>/items/<id_item>
 
 Dados de entrada:
 
@@ -783,8 +783,8 @@ Dados de entrada:
 
 Exemplo de requisição:
 
-> **PUT** *https://api.cielo.com.br/order-management/v1/orders/a9398720-9f78-4fa4-a5d4-ba54ba8009e7
-/items/8484df74-eca6-4850-8e4c-35653af0bd31*
+> **PUT** https://api.cielo.com.br/order-management/v1/orders/a9398720-9f78-4fa4-a5d4-ba54ba8009e7
+/items/8484df74-eca6-4850-8e4c-35653af0bd31
 
 ```json
 {
@@ -811,7 +811,7 @@ Esse recurso é utilizado para excluir um item presente em um pedido. O id do pe
 > 
 > Endpoint:
 > 
-> **DELETE** */orders/<id>/items/<id_item>*
+> **DELETE** /orders/<id>/items/<id_item>
 
 Dados de entrada:
 
@@ -822,7 +822,7 @@ Dados de entrada:
 
 Exemplo de requisição:
 
-> **DELETE** *https://api.cielo.com.br/order-management/v1/orders/a9398720-9f78-4fa4-a5d4-ba54ba8009e7/items/8484df74-eca6-4850-8e4c-35653af0bd31*
+> **DELETE** https://api.cielo.com.br/order-management/v1/orders/a9398720-9f78-4fa4-a5d4-ba54ba8009e7/items/8484df74-eca6-4850-8e4c-35653af0bd31
 
 Dados de saída:
 
@@ -840,7 +840,7 @@ Esse recurso permite que o desenvolvedor simule as transações financeiras, adi
 
 > Endpoint:
 > 
-> **POST** */orders/<id>/transactions>*
+> **POST** /orders/<id>/transactions
 
 Dados de entrada:
 
@@ -850,7 +850,7 @@ Dados de entrada:
 
 Exemplo de requisição:
 
-> **POST** *https://api.cielo.com.br/order-management/v1/orders/a9398720-9f78-4fa4-a5d4-ba54ba8009e7/transactions*
+> **POST** https://api.cielo.com.br/order-management/v1/orders/a9398720-9f78-4fa4-a5d4-ba54ba8009e7/transactions
 
 ```json
 {
@@ -900,7 +900,7 @@ Em ambiente de produção, uma vez que um pagamento for realizado na Cielo LIO a
 
 > Endpoint:
 > 
-> **GET** */orders/<id>/transactions*
+> **GET** /orders/<id>/transactions
 
 Dados de entrada:
 
@@ -910,7 +910,7 @@ Dados de entrada:
 
 Exemplo de requisição:
 
-> **GET** *https://api.cielo.com.br/order-management/v1/orders/c393ce9f-3741-413f-8ad5-2f142eaed51f/transactions*
+> **GET** https://api.cielo.com.br/order-management/v1/orders/c393ce9f-3741-413f-8ad5-2f142eaed51f/transactions
 
 Dados de saída:
 
@@ -946,6 +946,83 @@ Exemplo de resposta:
     "created_at": "20151020T13:13:29.000Z",
     "updated_at": "20151022T12:13:29.000Z"
 }]
+```
+
+### Fluxo Básico Utilização API Order manager Cielo LIO
+
+Abaixo você encontra um fluxo básico para enviar um pedido para a Cielo LIO utilizando a Integração Remota:
+
+![fluxo_basico](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/fluxogram-order-manager-slim.png)
+
+### Notificações de Mudanças na Order
+
+O maior motivo da disponibilização da API RESTful do Order Manager é permitir que aplicações parceiras se integrem à plataforma da Cielo na cloud. Porém, uma vez que as aplicações parceiras submetem pedidos, estes devem ser pagos localmente na própria Cielo LIO. Sendo assim, as aplicações parceiras precisam de uma forma de receber notificações de mudanças do status e das transações realizadas na Order.
+
+Para tal, é necessário que o parceiro disponibilize um Backend RESTful, que irá receber as notificações seguindo o formato abaixo. Uma vez recebidas as informações, o Backend tem a liberdade de ser utilizado da forma mais adequada ao modelo de negócio.
+
+#### PUT - Notificação de Mudança de Status
+
+A cada modificação de status em um pedido, o servidor do Order Manager envia, via comando, as informações para o Backend do parceiro.
+
+Requisição do Order Manager
+
+> **PUT** <url_cadastrada_pelo_parceiro>
+
+Exemplo de informação enviada pelo Order Manager
+
+```json
+{
+    "id": "f9a9e3c0d31445f7ac419642651f0a52",
+    "order_id": "ede8f84a8b8645cb8e576a593c25c6ed",
+    "type": "STATUS_CHANGED",
+    "status": {
+        "old": "ENTERED",
+        "new_status": "PAID"
+    }
+}
+```
+
+#### PUT - Notificação de Transação Realizada
+
+A cada transação/pagamento realizada em um pedido, o servidor do Order Manager envia, via comando, as informações para o Backend do parceiro.
+
+Requisição do Order Manager
+
+> **PUT** <url_cadastrada_pelo_parceiro>
+
+Exemplo de informação enviada pelo Order Manager
+
+```json
+{
+    "id": "c7b1dfc39f59436fbc55db8b4e360a96",
+    "order_id": "ede8f84a8b8645cb8e576a593c25c6ed",
+    "type": "TRANSACTION_ADDED",
+    "transaction": {
+        "id": "ede8f84a8b8645cb8e576a593c25c6ed",
+        "transaction_type": "PAYMENT",
+        "status": "CONFIRMED",
+        "terminal_number": "928273921",
+        "card": {
+            "brand": "VISA",
+            "bin": "490172",
+            "last": "7897"
+        },
+        "number": "1234589",
+        "authorization_code": "22388292",
+        "payment_product": {
+            "number": 928282,
+            "name": "CREDITO",
+            "sub": {
+                "number": 928282,
+                "name": "A VISTA"
+            }
+        },
+        "amount": 5000,
+        "created_at": "20151020T13:13:29.000Z",
+        "updated_at": "20151022T12:13:29.000Z"
+    }
+}	
+}
 ```
 
 # Integração Local
