Fix SDK Android

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -1027,7 +1027,7 @@ Exemplo de informação enviada pelo Order Manager
 
 ### SDK
 
-![android(https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android)](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png)
+[![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android)
 
 # Integração Local
 
