--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -1027,7 +1027,8 @@ Exemplo de informação enviada pelo Order Manager
 
 ### SDK
 
-[![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android)
+|[![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android)| [![C#](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/03-sdk-csharp.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-CSHARP)  | [![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/04-sdk-java.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Java)  |  [![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/07-sdk-php.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-PHP) |
+|---|---|---|---|
 
 # Integração Local
 
