--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -1031,6 +1031,17 @@ Exemplo de informação enviada pelo Order Manager
 |---|---|---|---|
 |[![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android)| [![C#](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/03-sdk-csharp.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-CSHARP)  | [![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/04-sdk-java.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Java)  |  [![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/07-sdk-php.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-PHP) |
 
+## teste
+
+```android
+// Criação das credenciais. Não se esquecer de substituir
+    // Client-Id e Access-Token por suas credenciais. 
+    
+    Credentials credentials = new Credentials("Client-Id", "Access-Token"); 
+    
+    orderManager = new OrderManager(credentials, context);
+```
+
 # Integração Local
 
 ## Apresentação
