--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -1248,7 +1248,7 @@ Iniciar processo de pagamento
 
 Este método permite iniciar o processo de pagamento na Cielo LIO.
 
-```json
+```java
     PaymentListener paymentListener = new PaymentListener() {
                 @Override
                 public void onStart() {
